--- a/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/secret.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: kiali
-  namespace: neon-ingress
+  namespace: neon-system
   labels:
     app: kiali
 type: Opaque
