#1351: Kublet is referencing the docker unix socket instead of CRI-O's socket

--- a/Services/neon-cluster-operator/neon-cluster-operator.csproj
+++ b/Services/neon-cluster-operator/neon-cluster-operator.csproj
@@ -18,10 +18,10 @@
 
     <KubeOpsConfigRoot>config.gitignore</KubeOpsConfigRoot>
     <KubeOpsSkipDockerfile>true</KubeOpsSkipDockerfile>
-    <KubeOpsSkipCrds></KubeOpsSkipCrds>
-    <KubeOpsSkipRbac></KubeOpsSkipRbac>
-    <KubeOpsSkipOperator></KubeOpsSkipOperator>
-    <KubeOpsSkipInstaller></KubeOpsSkipInstaller>
+    <KubeOpsSkipCrds>true</KubeOpsSkipCrds>
+    <KubeOpsSkipRbac>true</KubeOpsSkipRbac>
+    <KubeOpsSkipOperator>true</KubeOpsSkipOperator>
+    <KubeOpsSkipInstaller>true</KubeOpsSkipInstaller>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
