set grafana cookies

--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/grafana.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/grafana.yaml
@@ -12,6 +12,9 @@ spec:
       enable: recordedQueries tempoSearch
     security:
       disable_brute_force_login_protection: true
+      cookie_secure: true
+      cookie_samesite: none
+      allow_embedding: true
     log:
       mode: "console"
       level: "info"
