--- a/Lib/Neon.Kube.Setup/ClusterDefinitions/neon-desktop.hyperv.cluster.yaml
+++ b/Lib/Neon.Kube.Setup/ClusterDefinitions/neon-desktop.hyperv.cluster.yaml
@@ -14,6 +14,7 @@ hosting:
     namePrefix: ""
     cores: 4
     memory: 12 GiB
+    osDisk: 32 GiB
 network:
   premiseSubnet: 100.64.0.0/24
   gateway: 100.64.0.1
