--- a/ToolBin/neon-build/neon-build.runtimeconfig.json
+++ b/ToolBin/neon-build/neon-build.runtimeconfig.json
@@ -3,11 +3,12 @@
     "tfm": "net5.0",
     "framework": {
       "name": "Microsoft.NETCore.App",
-      "version": "5.0.12"
+      "version": "5.0.0"
     },
     "configProperties": {
       "System.GC.Concurrent": true,
-      "System.GC.Server": false
+      "System.GC.Server": false,
+      "System.Reflection.Metadata.MetadataUpdater.IsSupported": false
     }
   }
 }
