--- a/Services/neon-cluster-operator/neon-cluster-operator.csproj
+++ b/Services/neon-cluster-operator/neon-cluster-operator.csproj
@@ -14,14 +14,9 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
     
-    <!-- Configure the KubeOps buid targets as required. -->
+    <!-- Write generated installation YAML to an ephemeral folder -->
 
     <KubeOpsConfigRoot>config.gitignore</KubeOpsConfigRoot>
-    <KubeOpsSkipDockerfile>true</KubeOpsSkipDockerfile>
-    <KubeOpsSkipCrds>true</KubeOpsSkipCrds>
-    <KubeOpsSkipRbac>true</KubeOpsSkipRbac>
-    <KubeOpsSkipOperator>true</KubeOpsSkipOperator>
-    <KubeOpsSkipInstaller>true</KubeOpsSkipInstaller>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -85,18 +80,26 @@
   </Target>
   
   <!--
-  $hack(jefflill):
-  
   This target publishes all generated CRDs to [$/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/crds/*],
-  deleting any existing CRD files there first to ensure that the CRDs are in sync.
+  deleting any existing CRD files first to ensure that the CRDs are fully in sync.
+  
+  This also copies all generated installation related manifests to [$/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/*]
+  after kustomizing them.
   
   NOTE: [GenerateAfterBuild] is the KubeOps build target that generates the CRDs and other Kubernmetes manifest 
         and kustomization files.
   -->
 
   <Target Name="PublishCRDs" AfterTargets="GenerateAfterBuild">
-    <Message Importance="high" Text="*** PublishCRDs ***" />
-	<Exec Command="neon-build publish-files &quot;$(ProjectDir)config.gitignore\crds\*&quot; &quot;$(SolutionDir)Lib\Neon.Kube.Setup\Resources\Helm\$(MSBuildProjectName)\crds&quot; --exclude-kustomize" />  
+	  
+	  <Message Importance="high" Text="*** Publish CRDs ***" />
+	  <Exec Command="neon-build rm &quot;$(SolutionDir)Lib\Neon.Kube.Setup\Resources\Helm\$(MSBuildProjectName)\crds\*&quot;" />
+	  <Exec Command="neon-build publish-files &quot;$(ProjectDir)config.gitignore\crds\*&quot; &quot;$(SolutionDir)Lib\Neon.Kube.Setup\Resources\Helm\$(MSBuildProjectName)\crds&quot; --exclude-kustomize" />
+	  
+	  <Message Importance="high" Text="*** Publish Templates ***" />
+      <Exec Command="neon-build publish-folder &quot;$(ProjectDir)config\templates&quot; &quot;$(SolutionDir)Lib\Neon.Kube.Setup\Resources\Helm\$(MSBuildProjectName)\templates&quot;" />
+      <Exec Command="neon-build kustomize &quot;$(ProjectDir)config.gitignore\rbac&quot; &quot;$(SolutionDir)Lib\Neon.Kube.Setup\Resources\Helm\$(MSBuildProjectName)\templates\rbac.yaml&quot;" />
+  
   </Target>
   
 </Project>
