--- a/Lib/Neon.Kube.Entities/Neon.Kube.Entities.csproj
+++ b/Lib/Neon.Kube.Entities/Neon.Kube.Entities.csproj
@@ -28,7 +28,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     
     <!-- 
-    We need to prevent the KubeOps buid targets from trying to call the non-existent
+    We need to prevent the KubeOps build targets from trying to call the non-existent
     program entrypoint (due to this assembly being a Library) to generate the CRDs
     and other installation related files.
     -->
