--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/rbac.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/rbac.yaml
@@ -1,19 +1,21 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: operator-role
+  labels:
+    operator-element: rbac
+  name: "{{ .Release.namespace }}-role"
 rules:
 - apiGroups:
   - neonkube.io
   resources:
-  - ContainerRegistries
+  - containerregistries
   verbs:
   - get
   - list
   - watch
   - update
 - apiGroups:
-  - ''
+  - ""
   resources:
   - events
   verbs:
@@ -42,3 +44,18 @@ rules:
   - get
   - patch
   - update
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  labels:
+    operator-element: rbac
+  name: "{{ .Release.namespace }}-role-binding"
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: "{{ .Release.namespace }}-role"
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: system
