--- a/Services/neon-cluster-operator/config/templates/deployment.yaml
+++ b/Services/neon-cluster-operator/config/templates/deployment.yaml
@@ -4,8 +4,8 @@ metadata:
   labels:
     operator-deployment: neon-cluster-operator
     operator-element: operator-instance
-  name: {{ .Release.name }}
-  namespace: {{ .Release.namespace }}
+  name: operator
+  namespace: neon-system
 spec:
   revisionHistoryLimit: 0
   selector:
@@ -19,35 +19,36 @@ spec:
         operator-element: operator-instance
     spec:
       containers:
-      - name: operator
-        env:
+      - env:
         - name: POD_NAMESPACE
-          value: {{ .Values.namespace }}
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         envFrom:
         - configMapRef:
             name: neon-cluster-operator-webhook
         image: "{{ .Values.image.organization }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          pullPolicy: {{ .Values.image.pullPolicy }}
         startupProbe:
           exec:
             command:
             - /health-check
-          initialDelaySeconds: 1
-          periodSeconds: 5
-          timeoutSeconds: 1
+            periodSeconds: 5
+            timeoutSeconds: 1
         livenessProbe:
           exec:
             command:
             - /health-check
-          initialDelaySeconds: 1
-          periodSeconds: 5
-          timeoutSeconds: 1
+            initialDelaySeconds: 1
+            periodSeconds: 5
+            timeoutSeconds: 1
         readinessProbe:
           exec:
             command:
             - /ready-check
-          periodSeconds: 5
-          initialDelaySeconds: 1
-          timeoutSeconds: 1
+            periodSeconds: 5
+            initialDelaySeconds: 1
+            timeoutSeconds: 1
         ports:
         - containerPort: 5000
           name: http
@@ -58,4 +59,4 @@ spec:
           requests:
             cpu: 100m
             memory: 64Mi
-      terminationGracePeriodSeconds: 30
+      terminationGracePeriodSeconds: 10
