--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-sso-proxy/templates/ingress.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-sso-proxy/templates/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: dex
+  name: neon-sso-session-proxy
   namespace: neon-ingress
 spec:
   gateways:
@@ -14,6 +14,6 @@ spec:
             prefix: /
       route:
         - destination:
-            host: {{ include "dex.fullname" . }}.neon-system.svc.cluster.local
+            host: {{ include "neon-sso-session-proxy.fullname" . }}.neon-system.svc.cluster.local
             port:
-              number: {{ .Values.service.ports.http.port }}
+              number: {{ .Values.service.port }}
