--- a/Lib/Neon.Kube.Setup/Resources/Helm/glauth/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/glauth/values.yaml
@@ -12,7 +12,7 @@ image:
 
 imagePullSecrets: []
 nameOverride: ""
-fullnameOverride: ""
+fullnameOverride: "neon-sso-glauth"
 
 serviceAccount:
   # Specifies whether a service account should be created
