--- a/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/ingress.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/ingress.yaml
@@ -9,6 +9,14 @@ spec:
   hosts:
     - {{ .Values.ingress.subdomain }}.{{ .Values.cluster.domain }}
   http:
+    - match:
+        - uri:
+            prefix: /oauth2
+      route:
+        - destination:
+            host: neon-sso-oauth2-proxy.neon-system.svc.cluster.local
+            port:
+              number: 4180
     - headers:
         request:
           set:
