--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-sso-proxy/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-sso-proxy/templates/deployment.yaml
@@ -46,14 +46,28 @@ spec:
             - name: http-metrics
               containerPort: {{ .Values.metrics.port }}
               protocol: TCP
+          startupProbe:
+            exec:
+              command:
+              - /health-check         # $lt;--- this script works for both startup and liveliness probes
+            initialDelaySeconds: 1
+            failureThreshold: 30
+            periodSeconds: 5
+            timeoutSeconds: 1
           livenessProbe:
-            httpGet:
-              path: /healthz
-              port: http
+            exec:
+              command:
+              - /health-check
+            initialDelaySeconds: 1    # $lt;--- we don't need a long (fixed) delay here with a startup probe
+            periodSeconds: 10
+            timeoutSeconds: 1
           readinessProbe:
-            httpGet:
-              path: /healthz
-              port: http
+            exec:
+              command:
+              - /ready-check          # $lt;--- separate script for readiness probes
+            initialDelaySeconds: 1
+            periodSeconds: 10
+  /         timeoutSeconds: 1
           volumeMounts:
             - name: config
               mountPath: /etc/neonkube/neon-sso-session-proxy
