--- a/Services/neon-dashboard/neon-dashboard.csproj
+++ b/Services/neon-dashboard/neon-dashboard.csproj
@@ -12,6 +12,12 @@
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
+	<PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.2.0-rc1" />
+	<PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.1.0-rc1" />
+	<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc8" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc8" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc8" />
+	<PackageReference Include="prometheus-net.DotNetRuntime" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
