[neon-cluster-operator]: Temporaily disable CRD and other asset generation

--- a/Services/neon-cluster-operator/neon-cluster-operator.csproj
+++ b/Services/neon-cluster-operator/neon-cluster-operator.csproj
@@ -17,6 +17,14 @@
     <!-- Write generated installation YAML to an ephemeral folder -->
 
     <KubeOpsConfigRoot>config.gitignore</KubeOpsConfigRoot>
+	  
+	  
+	<!-- $debug(jefflill): Remove this after we figure out how to run without a kubeconfig -->  
+    <KubeOpsSkipDockerfile>true</KubeOpsSkipDockerfile>
+	<KubeOpsSkipCrds>true</KubeOpsSkipCrds>
+	<KubeOpsSkipRbac>true</KubeOpsSkipRbac>
+	<KubeOpsSkipOperator>true</KubeOpsSkipOperator>
+	<KubeOpsSkipInstaller>true</KubeOpsSkipInstaller>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
