--- a/Lib/Neon.Kube.Setup/Resources/Helm/dex/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/dex/values.yaml
@@ -7,13 +7,14 @@ replicaCount: 1
 
 image:
   # -- Name of the image repository to pull the container image from.
-  repository: ghcr.io/dexidp/dex
+  organization: neon-registry.node.local
+  repository: dexidp-dex
 
   # -- [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#updating-images) for updating already existing images on a node.
   pullPolicy: IfNotPresent
 
   # -- Image tag override for the default value (chart appVersion).
-  tag: ""
+  tag: v2.30.0
 
 # -- Reference to one or more secrets to be used when [pulling images](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/#create-a-pod-that-uses-your-secret) (from private registries).
 imagePullSecrets: []
