--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-sso-session-proxy/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-sso-session-proxy/values.yaml
@@ -5,10 +5,11 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/neonkube-dev/neon-sso-session-proxy
+  organization: neon-registry.node.local
+  repository: neon-sso-session-proxy
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "neonkube-0.3.0-alpha"
 
 imagePullSecrets: []
 nameOverride: ""
