--- a/Lib/Neon.Kube.Setup/Resources/Helm/oauth2-proxy/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/oauth2-proxy/templates/deployment.yaml
@@ -74,7 +74,7 @@ spec:
         - name: OAUTH2_PROXY_CLIENT_SECRET
           valueFrom:
             secretKeyRef:
-              name:  dex
+              name:  neon-sso-dex
               key: KUBERNETES_CLIENT_SECRET
         - name: OAUTH2_PROXY_COOKIE_SECRET
           valueFrom:
