#1364: NeonService: Deploy health-check and ready-check programs as Linux binaries

--- a/Lib/Neon.Service/Neon.Service.csproj
+++ b/Lib/Neon.Service/Neon.Service.csproj
@@ -45,6 +45,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\health-check" />
+    <None Remove="Resources\ready-check" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\health-check" />
+    <EmbeddedResource Include="Resources\ready-check" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="DnsClient" Version="1.4.0" />
     <PackageReference Include="GitInfo" Version="2.1.2">
       <PrivateAssets>all</PrivateAssets>
@@ -63,5 +73,21 @@
     <None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
     <None Include="..\..\LICENSE" Pack="True" PackagePath="" />
   </ItemGroup>
+	
+	<!--
+	This target builds the [health-check] and [ready-check] probe binaries for Linux.
+	These need to be built before the Neon.Service library so they can be embedded
+	as resources.
+	
+	These are C programs built via the [wsl-util gcc ...] command.
+	-->
+
+  <Target Name="BuildProbes" BeforeTargets="CoreCompile">
+	<Message Importance="high" Text="Building: health-check" />
+    <Exec Command="wsl-util gcc &quot;$(NF_ROOT)\Lib\Neon.Service\health-probes\health-check&quot; &quot;$(NF_ROOT)\Lib\Neon.Service\Resources\health-check&quot;" />
+	  
+	<Message Importance="high" Text="Building: ready-check" />
+    <Exec Command="wsl-util gcc &quot;$(NF_ROOT)\Lib\Neon.Service\health-probes\ready-check&quot; &quot;$(NF_ROOT)\Lib\Neon.Service\Resources\ready-check&quot;" />
+  </Target>
 
 </Project>
