[wsl-util gcc]: switch to [safe-apt-get] because [apt-get] seems to continue holding the lock for a while or we're seeing weird WSL2 behavior.

--- a/Tools/wsl-util/wsl-util.csproj
+++ b/Tools/wsl-util/wsl-util.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\safe-apt-get.sh" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\safe-apt-get.sh" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="GitInfo" Version="2.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
